# getter

./: .gitignore  Cargo.toml  LICENSE  README.md  backtrace  deps.edn
.github/: renovate.json
.github/workflows/: test.yaml
src/: api.rs  cache.rs  controller.rs  core.rs  error.rs  lib.rs  locale.rs  main.rs  provider.rs  rpc.rs  utils.rs  websdk.rs
src/cache/: convert.rs  item.rs  local.rs  manager.rs
src/core/: app.rs  app_manager.rs  app_status.rs  config.rs  status_tracker.rs
src/core/app/: data.rs  item.rs
src/core/config/: data.rs  utils.rs  world.rs
src/core/config/data/: rule_list.rs
src/core/config/world/: local_repo.rs  world_config_wrapper.rs  world_list.rs
src/data/: release.rs
src/database/: mod.rs  store.rs
src/database/models/: app.rs  extra_app.rs  extra_hub.rs  hub.rs  mod.rs
src/downloader/: config.rs  error.rs  external_rpc_impl.rs  hub_dispatch.rs  mod.rs  state.rs  task_manager.rs  traits.rs  trauma_impl.rs
src/getter/: core.clj  runner.clj
src/getter/provider/: git.clj  zypper.clj
src/manager/: android_api.rs  app_manager.rs  app_status.rs  auto_template.rs  cloud_config_getter.rs  data_getter.rs  hub_manager.rs  mod.rs  notification.rs  updater.rs  url_replace.rs  version.rs  version_map.rs
src/provider/: base_provider.rs  github.rs
src/rpc/: client.rs  data.rs  server.rs
src/utils/: convert.rs  http.rs  instance.rs  json.rs  time.rs  versioning.rs
src/websdk/: cloud_rules.rs  repo.rs
src/websdk/cloud_rules/: cloud_rules.rs  cloud_rules_manager.rs  cloud_rules_wrapper.rs  data.rs  download.rs
src/websdk/cloud_rules/data/: app_item.rs  config_list.rs  hub_item.rs
src/websdk/repo/: api.rs  controller.rs  provider.rs
src/websdk/repo/data/: release.rs
src/websdk/repo/provider/: base_provider.rs  fdroid.rs  github.rs  gitlab.rs  lsposed_repo.rs  outside_rpc.rs
tests/: cli_tests.rs  integration_tests.rs
tests/files/data/: provider_gitlab_release_AuroraStore.json
tests/files/web/: cloud_config.json
tests/script/: cargo_test.sh
