[package]
name = "getter"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls-platform-verifier"]
rustls-platform-verifier = ["hyper-rustls/rustls-platform-verifier", "dep:rustls-platform-verifier"]
rustls-platform-verifier-android = ["rustls-platform-verifier", "rustls-platform-verifier/jni"]
webpki-roots = ["hyper-rustls/webpki-roots"]
native-tokio = ["hyper-rustls/native-tokio"]

[dependencies]
once_cell = "1.19.0"
async-trait = "0.1.79"
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1", features = ["full", "macros"] }
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
quick-xml = { version = "0.37.0", features = ["encoding", "async-tokio"] }
async_fn_traits = "0.1.1"
version-compare = "0.2.0"
regex = "1.10.4"
chrono = { version = "0.4", features = ["serde"] }
hyper-util = { version = "0.1.6", features = ["client", "tokio", "http1"] }
http-body-util = "0.1.1"
jsonrpsee = { version = "0.24.0", features = ["server", "client"] }
hyper-rustls = { version = "0.27.2", features = ["http1", "http2", "native-tokio", "ring", "tls12"], default-features = false }
rustls-platform-verifier = { version = "0.5.0", optional = true }
rustls = { version = "0.23.12", default-features = false }
markdown = "1.0.0-alpha.21"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
mockito = "1.4.0"
tempfile = "3.10.1"
