[package]
name = "getter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
getter-core = { workspace = true }
getter-appmanager = { workspace = true }
getter-cache = { workspace = true }
getter-provider = { workspace = true }
getter-config = { workspace = true }
getter-utils = { workspace = true }
getter-rpc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }

[workspace]
resolver = "2"
members = [
    "packages/getter-cache",
    "packages/getter-provider",
    "packages/getter-appmanager",
    "packages/getter-config",
    "packages/getter-utils",
    "packages/getter-rpc",
    "packages/getter-core",
    "packages/getter-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DUpdateSystem Team"]
license = "MIT"
repository = "https://github.com/DUpdateSystem/getter"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1", features = ["full", "macros"] }
async-trait = "0.1.79"
once_cell = "1.19.0"

# HTTP and networking
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["client", "tokio", "http1"] }
http-body-util = "0.1.1"
hyper-rustls = { version = "0.27.2", features = ["http1", "http2", "native-tokio", "ring", "tls12"], default-features = false }
rustls = { version = "0.23.12", default-features = false }
rustls-platform-verifier = { version = "0.6.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
quick-xml = { version = "0.38.0", features = ["encoding", "async-tokio"] }


# Utilities
bytes = "1.6.0"
regex = "1.10.4"
version-compare = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
markdown = "1.0.0-alpha.21"
clap = { version = "4.0", features = ["derive"] }

# Internal workspace dependencies
getter-cache = { path = "packages/getter-cache" }
getter-provider = { path = "packages/getter-provider" }
getter-appmanager = { path = "packages/getter-appmanager" }
getter-config = { path = "packages/getter-config" }
getter-utils = { path = "packages/getter-utils" }
getter-rpc = { path = "packages/getter-rpc" }
getter-core = { path = "packages/getter-core" }
getter-cli = { path = "packages/getter-cli" }


