[package]
name = "getter"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls-platform-verifier"]
rustls-platform-verifier = ["hyper-rustls/rustls-platform-verifier", "dep:rustls-platform-verifier"]
rustls-platform-verifier-android = ["rustls-platform-verifier", "rustls-platform-verifier/jni"]
webpki-roots = ["hyper-rustls/webpki-roots"]
native-tokio = ["hyper-rustls/native-tokio"]

[dependencies]
once_cell = "1.21.3"
async-trait = "0.1.89"
hyper = { version = "1.8", features = ["full"] }
tokio = { version = "1", features = ["full", "macros"] }
bytes = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
quick-xml = { version = "0.38.4", features = ["encoding", "async-tokio"] }
async_fn_traits = "0.1.1"
version-compare = "0.2.1"
regex = "1.12.2"
hyper-util = { version = "0.1.19", features = ["client", "tokio", "http1"] }
http-body-util = "0.1.3"
jsonrpsee = { version = "0.26.0", features = ["server", "client"] }
hyper-rustls = { version = "0.27.7", features = ["http1", "http2", "native-tokio", "ring", "tls12"], default-features = false }
rustls-platform-verifier = { version = "0.6.2", optional = true }
rustls = { version = "0.23.36", default-features = false }
markdown = "1.0.0"
# Downloader dependencies
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
parking_lot = "0.12"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
mockito = "1.7.1"
tempfile = "3.24.0"
